--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="yellow-line"> </div>
                 <ul>
                     <li v-for="item in menus">
-                            <h3 class="menu-item-header">{{ item.header }}</h3>
+                            <h3 class="menu-item-header">{{ item.title }}</h3>
                             <div class="dotted"></div>
                             <p class="menu-item-price">{{ item.price }} рублей</p>
                             <p class="menu-item-description">{{ item.description }}</p>
